--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng deploy --base-href=/app-notes/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
